--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,6 @@
   "config": {
     "optimize-autoloader": true,
     "preferred-install": "dist",
-    "sort-packages": true,
+    "sort-packages": true
   }
 }
