--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     }
   ],
   "require": {
-    "php": "^7.1.3",
+    "php": "^7.1.3|^8.1",
     "ext-curl": "*",
     "vich/uploader-bundle": "^1.8"
   },
